--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "react-youtube": "^10.1.0",
-    "resolver-options": "^1.0.4"
+    "resolver-options": "^1.0.4",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
